--- a/iot/Makefile
+++ b/iot/Makefile
@@ -1,3 +1,3 @@
-all: main.c
-	$(CC) -lmosquitto main.c
+all: main.c mqtt.c temperature.c
+	$(CC) -lmosquitto -lpthread -li2c main.c mqtt.c temperature.c
 
