Fix dockerfile and add exec perms to deploy script

--- a/backend/Api/Dockerfile
+++ b/backend/Api/Dockerfile
@@ -22,4 +22,6 @@ RUN dotnet publish "./Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:Use
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+RUN mkdir /app/db
+RUN chmod 777 /app/db
 ENTRYPOINT ["dotnet", "Api.dll"]
