--- a/iot/Makefile
+++ b/iot/Makefile
@@ -1,3 +1,3 @@
-all: main.c mqtt.c temperature.c device_id.c
-	$(CC) -lmosquitto -lpthread -li2c main.c mqtt.c temperature.c device_id.c
+all: main.c brokers/mqtt.c brokers/amqp.c temperature.c device_id.c
+	$(CC) -lmosquitto -lrabbitmq -lpthread -li2c main.c brokers/mqtt.c brokers/amqp.c temperature.c device_id.c
 
