--- a/iot/Makefile
+++ b/iot/Makefile
@@ -1,3 +1,5 @@
-all: main.c brokers/mqtt.c brokers/amqp.c temperature.c device_id.c
-	$(CC) -lmosquitto -lrabbitmq -lpthread -li2c main.c brokers/mqtt.c brokers/amqp.c temperature.c device_id.c
+FILES=main.c brokers/mqtt.c brokers/amqp.c devices/temperature.c devices/display.c device_id.c
+
+all: $(FILES)
+	$(CC) -lmosquitto -lrabbitmq -lpthread -li2c $(FILES)
 
