Implement buzzer alarm

--- a/iot/Makefile
+++ b/iot/Makefile
@@ -1,5 +1,7 @@
-FILES=main.c brokers/mqtt.c brokers/amqp.c devices/temperature.c devices/display.c device_id.c
+FILES=main.c brokers/mqtt.c brokers/amqp.c devices/temperature.c devices/display.c devices/buzzer.c device_id.c
+
+# libgpiod version must be < 2.0
 
 all: $(FILES)
-	$(CC) -lmosquitto -lrabbitmq -lpthread -li2c $(FILES)
+	$(CC) -lmosquitto -lrabbitmq -lpthread -li2c -lgpiod $(FILES)
 
