Small fixes to iot code

--- a/iot/Makefile
+++ b/iot/Makefile
@@ -3,5 +3,5 @@ FILES=main.c brokers/mqtt.c brokers/amqp.c devices/temperature.c devices/display
 # libgpiod version must be < 2.0
 
 all: $(FILES)
-	$(CC) -lmosquitto -lrabbitmq -lpthread -li2c -lgpiod $(FILES)
+	$(CC) -lmosquitto -lrabbitmq -pthread -li2c -lgpiod $(FILES)
 
